{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 41,
  "lineage": "3c92221c-ae07-ab1e-925f-8b712675120a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b30c15a5c873dd3",
            "arn": "arn:aws:ec2:us-east-1:166782170805:elastic-ip/eipalloc-08b30c15a5c873dd3",
            "association_id": "eipassoc-0d1f36c7afa57c382",
            "domain": "vpc",
            "id": "eipalloc-08b30c15a5c873dd3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c865bd8068091793",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-52-72-95-94.compute-1.amazonaws.com",
            "public_ip": "52.72.95.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pactocar-nat-eip"
            },
            "tags_all": {
              "Name": "pactocar-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:internet-gateway/igw-0015b4b67afafedf4",
            "id": "igw-0015b4b67afafedf4",
            "owner_id": "166782170805",
            "tags": {
              "Name": "pactocar-igw"
            },
            "tags_all": {
              "Name": "pactocar-igw"
            },
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:166782170805:loadbalancer/app/pactocar-alb/bc7b3515c0270fef",
            "arn_suffix": "app/pactocar-alb/bc7b3515c0270fef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pactocar-alb-1912977526.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:166782170805:loadbalancer/app/pactocar-alb/bc7b3515c0270fef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pactocar-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0e98821cc8e6147"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010b48457bebbb930"
              },
              {
                "subnet_id": "subnet-09440e81f8eb2b17f"
              }
            ],
            "subnets": [
              "subnet-010b48457bebbb930",
              "subnet-09440e81f8eb2b17f"
            ],
            "tags": {
              "Name": "pactocar-alb"
            },
            "tags_all": {
              "Name": "pactocar-alb"
            },
            "vpc_id": "vpc-0e3492a2251ba1385",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:166782170805:listener/app/pactocar-alb/bc7b3515c0270fef/58b25e8136794111",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:166782170805:targetgroup/pactocar-tg-backend/de46421cf7f98ce2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:166782170805:listener/app/pactocar-alb/bc7b3515c0270fef/58b25e8136794111",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:166782170805:loadbalancer/app/pactocar-alb/bc7b3515c0270fef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:166782170805:targetgroup/pactocar-tg-backend/de46421cf7f98ce2",
            "arn_suffix": "targetgroup/pactocar-tg-backend/de46421cf7f98ce2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:166782170805:targetgroup/pactocar-tg-backend/de46421cf7f98ce2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:166782170805:loadbalancer/app/pactocar-alb/bc7b3515c0270fef"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pactocar-tg-backend",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pactocar-tg-backend"
            },
            "tags_all": {
              "Name": "pactocar-tg-backend"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b30c15a5c873dd3",
            "association_id": "eipassoc-0d1f36c7afa57c382",
            "connectivity_type": "public",
            "id": "nat-02828a31260bb98d2",
            "network_interface_id": "eni-0c865bd8068091793",
            "private_ip": "10.0.1.18",
            "public_ip": "52.72.95.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010b48457bebbb930",
            "tags": {
              "Name": "pactocar-nat"
            },
            "tags_all": {
              "Name": "pactocar-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:route-table/rtb-047b13cbfa5fa0e15",
            "id": "rtb-047b13cbfa5fa0e15",
            "owner_id": "166782170805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02828a31260bb98d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pactocar-rt-private"
            },
            "tags_all": {
              "Name": "pactocar-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:route-table/rtb-0c90255daa1f411c3",
            "id": "rtb-0c90255daa1f411c3",
            "owner_id": "166782170805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0015b4b67afafedf4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pactocar-rt-public"
            },
            "tags_all": {
              "Name": "pactocar-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071615a7a2b31801f",
            "route_table_id": "rtb-047b13cbfa5fa0e15",
            "subnet_id": "subnet-054df6fab87a2c713"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e6b264b07709ab",
            "route_table_id": "rtb-047b13cbfa5fa0e15",
            "subnet_id": "subnet-06fd33b08a6852b9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1b",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f093e586c9d4070a",
            "route_table_id": "rtb-0c90255daa1f411c3",
            "subnet_id": "subnet-010b48457bebbb930"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f2ff37f7cc99d0",
            "route_table_id": "rtb-0c90255daa1f411c3",
            "subnet_id": "subnet-09440e81f8eb2b17f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:security-group/sg-0c0e98821cc8e6147",
            "description": "Trafico HTTP entrante al ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0e98821cc8e6147",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pactocar-sg-alb",
            "name_prefix": "",
            "owner_id": "166782170805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pactocar-sg-alb"
            },
            "tags_all": {
              "Name": "pactocar-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:security-group/sg-0b7f91b2f56136b1c",
            "description": "Trafico del ALB hacia los contenedores ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7f91b2f56136b1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0e98821cc8e6147"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "pactocar-sg-ecs",
            "name_prefix": "",
            "owner_id": "166782170805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pactocar-sg-ecs"
            },
            "tags_all": {
              "Name": "pactocar-sg-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:security-group/sg-08e9d6f78b3ceebc4",
            "description": "Trafico de ECS hacia RDS PostgreSQL",
            "egress": [],
            "id": "sg-08e9d6f78b3ceebc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7f91b2f56136b1c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pactocar-sg-rds",
            "name_prefix": "",
            "owner_id": "166782170805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pactocar-sg-rds"
            },
            "tags_all": {
              "Name": "pactocar-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:subnet/subnet-054df6fab87a2c713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054df6fab87a2c713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166782170805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pactocar-private-1a"
            },
            "tags_all": {
              "Name": "pactocar-private-1a"
            },
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:subnet/subnet-06fd33b08a6852b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fd33b08a6852b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166782170805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pactocar-private-1b"
            },
            "tags_all": {
              "Name": "pactocar-private-1b"
            },
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:subnet/subnet-010b48457bebbb930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010b48457bebbb930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "166782170805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pactocar-public-1a"
            },
            "tags_all": {
              "Name": "pactocar-public-1a"
            },
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:subnet/subnet-09440e81f8eb2b17f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09440e81f8eb2b17f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "166782170805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pactocar-public-1b"
            },
            "tags_all": {
              "Name": "pactocar-public-1b"
            },
            "vpc_id": "vpc-0e3492a2251ba1385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:166782170805:vpc/vpc-0e3492a2251ba1385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ca5aedf30387f6e",
            "default_route_table_id": "rtb-03c7e95176a196d1e",
            "default_security_group_id": "sg-029fe9c2a67153aae",
            "dhcp_options_id": "dopt-01f39b8bd9a1b1c7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3492a2251ba1385",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c7e95176a196d1e",
            "owner_id": "166782170805",
            "tags": {
              "Name": "pactocar-vpc"
            },
            "tags_all": {
              "Name": "pactocar-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}